--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,13 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #008080;
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   /* background: #888; */
-  background: #3faaac;
+  background: #8f71ff;
   border-radius: 5px;
 }
 
